--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,14 +1,15 @@
 window#waybar {
-    background-color: #141b1e;
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  background-color: #141b1e;
+  font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  font-weight: bold;
 }
 
 #workspaces {
-    margin: 10px;
-    padding: 7px;
-    padding-right: 10px;
-    background-color: #232a2d;
-    font-size: 18px;  
+  margin: 10px;
+  padding: 7px;
+  padding-right: 10px;
+  background-color: #232a2d;
+  font-size: 18px;  
 }
 
 #workspaces button {
@@ -16,7 +17,7 @@ window#waybar {
 }
 
 #workspaces button:hover {
-    border-radius: 0;
+  border-radius: 0;
   color: #fff;
 }
 
@@ -25,48 +26,43 @@ window#waybar {
 }
 
 #custom-power {
-    color: #141b1e;
-    background-color: #e57474; 
-    font-size: 15px;
-    border-radius: 10px;
-    padding: 10px 0px;
-    margin: 0px 10px;
-    margin-bottom: 5px;
+  color: #141b1e;
+  background-color: #e57474; 
+  font-size: 15px;
+  border-radius: 10px;
+  padding: 16px 0px;
+  margin: 0px 10px;
+  margin-bottom: 5px;
 }
 
 #clock {
-    color: #dadada;
-    font-size: 1.2em;
-    margin-bottom: 8px;
+  color: #dadada;
+  font-size: 1.2em;
+  margin-bottom: 8px;
+  font-weight: normal;
 }
 
 #custom-separator {
-    color: #dadada; 
+  color: #dadada; 
 }
 
 #memory {
-    color: #fff;
-    font-size: 17px;
+  color: #E67E80;
+  margin-bottom: 8px;
 }
 
 #disk {
-    color: #fff;
+  color: #D699B6;
+  margin-bottom: 8px;
 }
 
 #submap {
-    color: #fff;
+  color: #fff;
+  margin-bottom: 8px;
 }
 
 #cpu {
-    color: #fff;
-    font-size: 17px;
+  color: #7FBBB3;
+  margin-bottom: 8px;
 }
 
-#custom-wofi {
-    border-radius: 50px;
-    margin: 10px;
-    font-size:17px;
-    padding: 7px;
-    background-color: #232a2d;
-    color: #dadada;
-}
