--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,14 +1,11 @@
 window#waybar {
-  background-color: #141b1e;
+  background: transparent;
   font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
   font-weight: bold;
 }
 
 #workspaces {
-  margin: 10px;
-  padding: 7px;
-  padding-right: 10px;
-  background-color: #232a2d;
+  margin-left: -8px;
   font-size: 18px;  
 }
 
@@ -18,21 +15,62 @@ window#waybar {
 
 #workspaces button:hover {
   border-radius: 0;
-  color: #fff;
+  color: #444;
 }
 
 #workspaces button.active {
   color: #fff;
 }
 
-#custom-power {
-  color: #141b1e;
-  background-color: #e57474; 
-  font-size: 15px;
-  border-radius: 10px;
-  padding: 16px 0px;
-  margin: 0px 10px;
-  margin-bottom: 5px;
+#custom-separator {
+  color: #dadada; 
+}
+
+/* root */
+#disk {
+  color: #D3C6AA;
+  margin-bottom: 8px;
+  margin-right: -8px;
+}
+
+#custom-disk-root {
+  color: #D3C6AA;
+}
+
+/* home */
+#disk.home {
+  color: #A7C080;
+  margin-bottom: 8px;
+}
+
+#custom-disk-home {
+  color: #A7C080;
+  margin-bottom: 2px;
+}
+
+#submap {
+  color: #D699B6;
+  margin-bottom: 8px;
+}
+
+#cpu {
+  color: #7FBBB3;
+  margin-bottom: 8px;
+  margin-right: -8px;
+}
+
+#custom-cpu-icon {
+  margin-right: 6px;
+  color: #7FBBB3;
+}
+
+#memory {
+  color: #E67E80;
+  margin-right: -10px;
+}
+
+#custom-ram-icon {
+  color: #E67E80;
 }
 
 #clock {
@@ -42,27 +80,16 @@ window#waybar {
   font-weight: normal;
 }
 
-#custom-separator {
-  color: #dadada; 
+#clock.day {
+  margin-top: -6px;
+  color: #E69875;
 }
 
-#memory {
-  color: #E67E80;
-  margin-bottom: 8px;
+#custom-power {
+  color: #141b1e;
+  background-color: #e57474; 
+  font-size: 15px;
+  border-radius: 10px;
+  padding: 8px 0px;
+  margin: 0px 0px 8px 0;
 }
-
-#disk {
-  color: #D699B6;
-  margin-bottom: 8px;
-}
-
-#submap {
-  color: #fff;
-  margin-bottom: 8px;
-}
-
-#cpu {
-  color: #7FBBB3;
-  margin-bottom: 8px;
-}
-
