--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -82,14 +82,6 @@ window#waybar {
 
 #clock.day {
   margin-top: -6px;
-  color: #E69875;
-}
-
-#custom-power {
-  color: #141b1e;
-  background-color: #e57474; 
-  font-size: 15px;
-  border-radius: 10px;
-  padding: 8px 0px;
-  margin: 0px 0px 8px 0;
+  color: #1E2326;
+  background-color: #E69875;
 }
