--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -18,7 +18,7 @@ window#waybar {
 
 #workspaces {
   font-size: 18px;  
-  margin-left: -8px;
+  margin-top: 30px;
 }
 
 #workspaces button {
@@ -136,12 +136,13 @@ window#waybar {
   background-color: @day-bg;
   color: @day-week-fg;
   margin-top: -6px;
-  margin-right: -2px;
+  padding: 6px 8px 6px 6px;
 }
 
 #clock.week-day {
   background: @cpu-week;
   border-top: 1px solid #444;
   color: @day-week-fg;
-  margin: -12px -2px 0 0;
+  margin: -12px -2px 30px 0;
+  padding: 6px;
 }
