--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,5 +1,5 @@
 @define-color cpu-week #D3C6AA; 
-@define-color gamemode_inac #9DA9A0; 
+@define-color gamemode_inac #fff; 
 @define-color gamemode_act #E67E80; 
 @define-color home #D699B6; 
 @define-color normal #fff; 
@@ -18,7 +18,7 @@ window#waybar {
 
 #workspaces {
   font-size: 18px;  
-  margin-top: 30px;
+  margin-top: 20px;
   margin-left: -4px;
 }
 
@@ -54,7 +54,7 @@ window#waybar {
 
 #gamemode,
 #gamemode.running {
-  margin: 0 0 4px 13px;
+  margin: 0 0 8px 8px;
 }
 
 #pulseaudio,
@@ -77,7 +77,7 @@ window#waybar {
 }
 
 #gamemode {
-  color: @gamemode_inac;
+  color: #fff;
 }
 
 #gamemode.running {
@@ -131,7 +131,7 @@ window#waybar {
 }
 
 #tray {
-  margin: 8px -2px 0 0;
+  margin: 8px 0 0 0;
 }
 
 #clock {
@@ -151,6 +151,6 @@ window#waybar {
   background: @cpu-week;
   border-top: 1px solid #444;
   color: @day-week-fg;
-  margin: -12px -2px 30px 0;
+  margin: -12px -2px 20px 0;
   padding: 6px;
 }
