--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -18,7 +18,6 @@ window#waybar {
 
 #workspaces {
   font-size: 18px;  
-  margin-top: 20px;
   margin-left: -4px;
 }
 
@@ -48,8 +47,13 @@ window#waybar {
 #disk-home,
 #pulseaudio,
 #custom-updates,
+#custom-dsbattery,
 #cpu {
   margin-bottom: 6px;
+}
+
+#custom-dsbattery {
+    color: #a6e3a1;
 }
 
 #gamemode,
@@ -151,6 +155,6 @@ window#waybar {
   background: @cpu-week;
   border-top: 1px solid #444;
   color: @day-week-fg;
-  margin: -12px -2px 20px 0;
+  margin: -12px -2px 0px 0;
   padding: 6px;
 }
