--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,6 +5,7 @@
 @define-color pulsa #A7C080;
 @define-color ram #83C092; 
 @define-color root #7FBBB3; 
+@define-color temp #3BCB73; 
 @define-color day-week-fg #1E2326;
 @define-color day-bg #E69875;
 
@@ -21,6 +22,11 @@ window#waybar {
 #workspaces button {
   border-radius: 0;
   color: #fff;
+}
+
+#workspaces button.empty {
+  background-color: rgba(20, 25, 28, .7);
+  color: #444;
 }
 
 #workspaces button:hover {
@@ -48,10 +54,10 @@ window#waybar {
 #disk-home,
 #pulseaudio,
 #cpu,
+#temperature,
 #memory {
   margin-right: 4px;
 }
-
 
 #custom-dsbattery {
   color: #a6e3a1;
@@ -68,6 +74,20 @@ window#waybar {
 
 #submap {
   color: @home;
+  margin-right: 6px;
+}
+
+#custom-temp-icon {
+  color: @temp;
+  margin-right: 5px;
+}
+
+#temperature {
+  color: @temp;
+  margin-bottom: 2px;
+}
+#temperature.critical {
+  color: red;
 }
 
 #pulseaudio.icon {
