--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -61,6 +61,7 @@ window#waybar {
 #tray,
 #custom-disk-root, 
 #submap,
+#custom-weather,
 #custom-temp-icon {
   margin: 4px 2px 2px 0;
 }
@@ -104,7 +105,7 @@ window#waybar {
 }
 
 #tray {
-  margin-bottom: 4px;
+  margin: 8px 3px 8px 0;
 }
 
 #clock {
@@ -125,4 +126,6 @@ window#waybar {
 
 #custom-weather {
   color: #fff;
+  margin-bottom: -1px;
+  font-size: 13px;
 }
