--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,7 +5,7 @@
 @define-color bg #7A8478;
 @define-color pulsa #A7C080;
 @define-color ram #83C092; 
-@define-color joy #E68369; 
+@define-color joy #D8BED8; 
 @define-color root #7FBBB3; 
 @define-color temp #3BCB73; 
 @define-color day-week-fg #1E2326;
@@ -148,6 +148,17 @@ window#waybar {
 #memory,
 #custom-ram-icon {
   color: @ram;
+}
+
+#custom-check-server {
+  font-size: 12px;
+  margin-bottom: 2px;
+}
+
+#custom-check-server-icon,
+#custom-check-server {
+  color: #CF7336;
+  margin-right: 2px;
 }
 
 #tray {
