changed server color

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -157,7 +157,7 @@ window#waybar {
 
 #custom-check-server-icon,
 #custom-check-server {
-  color: #CF7336;
+  color: #FF8225;
   margin-right: 2px;
 }
 
